--- a/PASSCITY/UI/AudioguideCard/Views/AudioguideCardHeaderView.xib
+++ b/PASSCITY/UI/AudioguideCard/Views/AudioguideCardHeaderView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Y0e-mX-Uzh" customClass="AudioguideCardHeaderView" customModule="PASSCITY" customModuleProvider="target">
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Y0e-mX-Uzh" customClass="GoBarHeaderItemView" customModule="PASSCITY" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="323"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
