--- a/PASSCITY/UI/EventExpo/VIews/ReviewTableViewCell.xib
+++ b/PASSCITY/UI/EventExpo/VIews/ReviewTableViewCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="216" id="2PG-so-crf" customClass="ReviewTableViewCell" customModule="PASSCITY" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="401" height="216"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="264" id="2PG-so-crf" customClass="ReviewTableViewCell" customModule="PASSCITY" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="401" height="264"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2PG-so-crf" id="xE0-n9-EPv">
-                <rect key="frame" x="0.0" y="0.0" width="401" height="215.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="401" height="263.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ayh-Ky-c0N" customClass="AvatarView" customModule="PASSCITY" customModuleProvider="target">
-                        <rect key="frame" x="20" y="11" width="32" height="32"/>
+                    <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ayh-Ky-c0N" customClass="AvatarView" customModule="PASSCITY" customModuleProvider="target">
+                        <rect key="frame" x="20" y="20" width="32" height="32"/>
                         <color key="backgroundColor" red="0.99980026483535767" green="0.60163038969039917" blue="0.60134011507034302" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="32" id="8RX-95-p19"/>
@@ -33,31 +33,31 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oLN-J8-LQu">
-                        <rect key="frame" x="67" y="18.5" width="200" height="18"/>
+                        <rect key="frame" x="67" y="27.5" width="200" height="18"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="999" text="   20.08.2017  19:29" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ZH-Zt-6Cm">
-                        <rect key="frame" x="272" y="20.5" width="109" height="14.5"/>
+                        <rect key="frame" x="272" y="29.5" width="109" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                         <color key="textColor" red="0.59993284940000002" green="0.60003870729999997" blue="0.59992617370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kXc-A0-UzH">
-                        <rect key="frame" x="20" y="55" width="361" height="11"/>
+                        <rect key="frame" x="20" y="64" width="361" height="40.5"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mbi-3d-77C">
-                        <rect key="frame" x="20" y="86" width="381" height="67"/>
+                        <rect key="frame" x="20" y="124.5" width="381" height="67"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="67" id="jbr-PT-LPq"/>
                         </constraints>
                     </scrollView>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="3MG-xJ-4qA">
-                        <rect key="frame" x="20" y="173" width="361" height="32"/>
+                        <rect key="frame" x="20" y="211.5" width="361" height="32"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vpD-xm-YHa">
                                 <rect key="frame" x="0.0" y="0.0" width="140" height="32"/>
@@ -178,9 +178,9 @@
                     <constraint firstItem="7ZH-Zt-6Cm" firstAttribute="leading" secondItem="oLN-J8-LQu" secondAttribute="trailing" constant="5" id="m2U-lp-ySs"/>
                     <constraint firstAttribute="trailing" secondItem="Mbi-3d-77C" secondAttribute="trailing" id="ota-G4-gZn"/>
                 </constraints>
-                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                <edgeInsets key="layoutMargins" top="20" left="20" bottom="20" right="20"/>
             </tableViewCellContentView>
-            <edgeInsets key="layoutMargins" top="20" left="20" bottom="20" right="20"/>
+            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
             <connections>
                 <outlet property="avatarView" destination="Ayh-Ky-c0N" id="Dod-46-c1c"/>
                 <outlet property="comfortRatingView" destination="Npp-RC-Vet" id="Jgy-xJ-Wgd"/>
@@ -191,7 +191,7 @@
                 <outlet property="interestingRatingView" destination="AW2-I7-Z6W" id="QXU-rf-EQc"/>
                 <outlet property="nameLabel" destination="oLN-J8-LQu" id="TO8-EE-LcI"/>
             </connections>
-            <point key="canvasLocation" x="25.5" y="23"/>
+            <point key="canvasLocation" x="25.5" y="48"/>
         </tableViewCell>
     </objects>
     <resources>
