--- a/EventExpoHeaderView.xib
+++ b/EventExpoHeaderView.xib
@@ -6,22 +6,20 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" id="v3Z-qz-Se7" customClass="EventExpoHeaderView" customModule="PASSCITY" customModuleProvider="target">
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="v3Z-qz-Se7" customClass="EventExpoHeaderView" customModule="PASSCITY" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="344" height="411"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="egk-eh-etO">
                     <rect key="frame" x="0.0" y="0.0" width="344" height="243"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="243" id="wMs-dS-iGf"/>
-                    </constraints>
                 </imageView>
-                <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tt1-NW-ALt" customClass="GradientView" customModule="PASSCITY" customModuleProvider="target">
+                <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tt1-NW-ALt" customClass="GradientView" customModule="PASSCITY" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="344" height="243"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nIz-RN-6WM" customClass="FloatRatingView" customModule="FloatRatingView">
@@ -136,9 +134,11 @@
                         <constraint firstAttribute="trailing" secondItem="7IG-an-1Xs" secondAttribute="trailing" constant="15" id="nP8-Tu-yOe"/>
                         <constraint firstItem="Qhg-Lk-yyN" firstAttribute="leading" secondItem="eKi-lN-01F" secondAttribute="trailing" constant="16" id="o5I-aP-Exd"/>
                         <constraint firstAttribute="bottom" secondItem="7IG-an-1Xs" secondAttribute="bottom" constant="20" id="oYu-ow-U1a"/>
+                        <constraint firstAttribute="height" constant="243" id="siU-hj-KOM"/>
                         <constraint firstItem="Gw6-JW-7Wk" firstAttribute="leading" secondItem="tt1-NW-ALt" secondAttribute="leading" constant="20" id="vvf-4X-PuT"/>
                         <constraint firstItem="WbE-t8-tRX" firstAttribute="centerY" secondItem="eKi-lN-01F" secondAttribute="centerY" id="wYH-yT-fbh"/>
                     </constraints>
+                    <viewLayoutGuide key="safeArea" id="vFF-vF-S2r"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="firstColor">
                             <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -208,32 +208,25 @@
                             <rect key="frame" x="0.0" y="0.0" width="344" height="80"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3RP-VD-Kof">
-                                    <rect key="frame" x="0.0" y="39" width="344" height="20"/>
+                                    <rect key="frame" x="0.0" y="38.5" width="344" height="41.5"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bmb-k6-o0r">
-                                            <rect key="frame" x="154" y="8" width="36" height="4"/>
-                                            <color key="backgroundColor" red="0.83912390469999998" green="0.83926850559999999" blue="0.83911478520000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="4" id="RYn-Y6-Ink"/>
-                                                <constraint firstAttribute="width" constant="36" id="YOc-Hw-EDn"/>
-                                            </constraints>
-                                        </view>
+                                        <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pel-WY-Z6n">
+                                            <rect key="frame" x="154" y="7" width="36" height="25.5"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" image="handle"/>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <gestureRecognizers/>
                                     <constraints>
-                                        <constraint firstItem="bmb-k6-o0r" firstAttribute="centerX" secondItem="3RP-VD-Kof" secondAttribute="centerX" id="5bS-W8-Wu6"/>
-                                        <constraint firstAttribute="bottom" secondItem="bmb-k6-o0r" secondAttribute="bottom" constant="8" id="BIN-so-XOw"/>
-                                        <constraint firstItem="bmb-k6-o0r" firstAttribute="top" secondItem="3RP-VD-Kof" secondAttribute="top" constant="8" id="BsL-YW-ARs"/>
-                                        <constraint firstItem="bmb-k6-o0r" firstAttribute="centerY" secondItem="3RP-VD-Kof" secondAttribute="centerY" id="DkN-2f-nTj"/>
                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="VYy-eK-kPL"/>
                                     </constraints>
                                     <connections>
                                         <outletCollection property="gestureRecognizers" destination="8rM-kn-SH0" appends="YES" id="OuL-wB-teg"/>
                                     </connections>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="Label" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ir0-TN-h5t">
-                                    <rect key="frame" x="20" y="16" width="304" height="15"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="Label" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ir0-TN-h5t">
+                                    <rect key="frame" x="20" y="16" width="304" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -244,6 +237,7 @@
                                 <constraint firstItem="ir0-TN-h5t" firstAttribute="leading" secondItem="Nud-yu-GqW" secondAttribute="leading" constant="20" id="Emw-aE-YCS"/>
                                 <constraint firstAttribute="trailing" secondItem="3RP-VD-Kof" secondAttribute="trailing" id="ICy-RV-lJo"/>
                                 <constraint firstItem="3RP-VD-Kof" firstAttribute="top" secondItem="ir0-TN-h5t" secondAttribute="bottom" constant="8" id="Kq1-yR-d6L"/>
+                                <constraint firstAttribute="bottom" secondItem="3RP-VD-Kof" secondAttribute="bottom" id="ana-vg-NZF"/>
                                 <constraint firstAttribute="trailing" secondItem="ir0-TN-h5t" secondAttribute="trailing" constant="20" id="b7f-go-FR7"/>
                                 <constraint firstItem="3RP-VD-Kof" firstAttribute="leading" secondItem="Nud-yu-GqW" secondAttribute="leading" id="f9v-U3-nQI"/>
                                 <constraint firstItem="ir0-TN-h5t" firstAttribute="top" secondItem="Nud-yu-GqW" secondAttribute="top" constant="16" id="tuE-SA-uxP"/>
@@ -254,7 +248,6 @@
                     <constraints>
                         <constraint firstItem="Nud-yu-GqW" firstAttribute="top" secondItem="Xsy-EE-Lgh" secondAttribute="top" id="Fqq-pq-saB"/>
                         <constraint firstAttribute="bottom" secondItem="Nud-yu-GqW" secondAttribute="bottom" id="JLU-M5-2vo"/>
-                        <constraint firstAttribute="height" constant="80" id="KNU-Up-6eC"/>
                         <constraint firstItem="Nud-yu-GqW" firstAttribute="leading" secondItem="Xsy-EE-Lgh" secondAttribute="leading" id="XVd-jY-XlC"/>
                         <constraint firstAttribute="trailing" secondItem="Nud-yu-GqW" secondAttribute="trailing" id="m53-A4-pMS"/>
                     </constraints>
@@ -270,6 +263,7 @@
             <constraints>
                 <constraint firstItem="tt1-NW-ALt" firstAttribute="leading" secondItem="v3Z-qz-Se7" secondAttribute="leading" id="6Xj-fO-nLZ"/>
                 <constraint firstItem="Xsy-EE-Lgh" firstAttribute="leading" secondItem="v3Z-qz-Se7" secondAttribute="leading" id="75L-CR-mb7"/>
+                <constraint firstItem="tt1-NW-ALt" firstAttribute="top" secondItem="egk-eh-etO" secondAttribute="top" id="9vZ-ev-qNn"/>
                 <constraint firstItem="tt1-NW-ALt" firstAttribute="width" secondItem="egk-eh-etO" secondAttribute="width" id="DeM-eK-5NE"/>
                 <constraint firstAttribute="trailing" secondItem="Xsy-EE-Lgh" secondAttribute="trailing" id="Gzk-wC-fX7"/>
                 <constraint firstItem="egk-eh-etO" firstAttribute="leading" secondItem="tt1-NW-ALt" secondAttribute="leading" id="Hff-dM-L6O"/>
@@ -313,6 +307,7 @@
                 <outlet property="ratingView" destination="nIz-RN-6WM" id="Ixn-ic-dDu"/>
                 <outlet property="shareButton" destination="hpJ-YY-FV3" id="roe-Gg-Uvq"/>
                 <outlet property="titleLabel" destination="Gw6-JW-7Wk" id="5s8-Gz-VEz"/>
+                <outlet property="toggleButton" destination="pel-WY-Z6n" id="COa-9g-QFf"/>
                 <outletCollection property="dateTimePlaceIcons" destination="Qhg-Lk-yyN" collectionClass="NSMutableArray" id="RFr-1h-1C7"/>
             </connections>
             <point key="canvasLocation" x="342" y="1011.5"/>
@@ -324,6 +319,7 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
+        <image name="handle" width="36" height="4"/>
         <image name="iconClock" width="12" height="12"/>
         <image name="iconComments" width="12" height="12"/>
         <image name="iconLocation" width="12" height="12"/>
