--- a/PASSCITY/UI/AudioguideCard/Views/AudioguideCardHeaderView.xib
+++ b/PASSCITY/UI/AudioguideCard/Views/AudioguideCardHeaderView.xib
@@ -11,80 +11,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Y0e-mX-Uzh" customClass="GoBarHeaderItemView" customModule="PASSCITY" customModuleProvider="target">
+        <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" id="Y0e-mX-Uzh" customClass="GoBarHeaderItemView" customModule="PASSCITY" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="323"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sYC-3a-CVh">
-                    <rect key="frame" x="0.0" y="243" width="375" height="80"/>
-                    <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1vn-rz-RqX">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="80" id="8te-s6-zrD"/>
-                            </constraints>
-                        </stackView>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="80" id="5nb-z1-4Em"/>
-                        <constraint firstAttribute="bottom" secondItem="1vn-rz-RqX" secondAttribute="bottom" id="MNE-Gl-1LS"/>
-                        <constraint firstItem="1vn-rz-RqX" firstAttribute="leading" secondItem="sYC-3a-CVh" secondAttribute="leading" id="hN7-Mq-A4j"/>
-                        <constraint firstItem="1vn-rz-RqX" firstAttribute="top" secondItem="sYC-3a-CVh" secondAttribute="top" id="kwi-YV-1pe"/>
-                        <constraint firstAttribute="trailing" secondItem="1vn-rz-RqX" secondAttribute="trailing" id="mW8-ga-h5g"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yFw-e5-E7a">
-                    <rect key="frame" x="0.0" y="199" width="375" height="44"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hEH-8j-iqd">
-                            <rect key="frame" x="0.0" y="0.0" width="187" height="44"/>
-                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            <inset key="imageEdgeInsets" minX="-15" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <state key="normal" title="Оценить" image="iconRatingFillCopy">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="rateButtonAction:" destination="Y0e-mX-Uzh" eventType="touchUpInside" id="vJ2-LJ-AFm"/>
-                            </connections>
-                        </button>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y9i-wK-CqH">
-                            <rect key="frame" x="187" y="5" width="1" height="34"/>
-                            <color key="backgroundColor" red="0.83912390469999998" green="0.83926850559999999" blue="0.83911478520000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="1" id="kbK-G2-S0w"/>
-                            </constraints>
-                        </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gGj-VJ-4Dz">
-                            <rect key="frame" x="188" y="0.0" width="187" height="44"/>
-                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
-                            <inset key="imageEdgeInsets" minX="-15" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <state key="normal" title="Поделиться" image="iconMenuShare">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="shareButtonAction:" destination="Y0e-mX-Uzh" eventType="touchUpInside" id="YQd-A0-vzk"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="y9i-wK-CqH" firstAttribute="centerX" secondItem="yFw-e5-E7a" secondAttribute="centerX" id="0Ig-Iy-thG"/>
-                        <constraint firstAttribute="bottom" secondItem="gGj-VJ-4Dz" secondAttribute="bottom" id="Dil-re-0pm"/>
-                        <constraint firstItem="y9i-wK-CqH" firstAttribute="top" secondItem="yFw-e5-E7a" secondAttribute="top" constant="5" id="Eyz-Y3-m2e"/>
-                        <constraint firstItem="hEH-8j-iqd" firstAttribute="top" secondItem="yFw-e5-E7a" secondAttribute="top" id="Jfv-aX-tY5"/>
-                        <constraint firstAttribute="bottom" secondItem="hEH-8j-iqd" secondAttribute="bottom" id="L2j-V0-bLD"/>
-                        <constraint firstItem="y9i-wK-CqH" firstAttribute="leading" secondItem="hEH-8j-iqd" secondAttribute="trailing" id="TiW-8b-D5k"/>
-                        <constraint firstAttribute="height" constant="44" id="Vle-0d-lAt"/>
-                        <constraint firstAttribute="bottom" secondItem="y9i-wK-CqH" secondAttribute="bottom" constant="5" id="cBg-a1-1fp"/>
-                        <constraint firstItem="gGj-VJ-4Dz" firstAttribute="leading" secondItem="y9i-wK-CqH" secondAttribute="trailing" id="eKX-bm-hku"/>
-                        <constraint firstItem="gGj-VJ-4Dz" firstAttribute="top" secondItem="yFw-e5-E7a" secondAttribute="top" id="mrm-Ub-4Jy"/>
-                        <constraint firstAttribute="trailing" secondItem="gGj-VJ-4Dz" secondAttribute="trailing" id="uDp-LB-jtN"/>
-                        <constraint firstItem="hEH-8j-iqd" firstAttribute="leading" secondItem="yFw-e5-E7a" secondAttribute="leading" id="wFr-57-Ahw"/>
-                    </constraints>
-                </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ECW-sI-9Xw">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
                     <constraints>
@@ -175,6 +105,76 @@
                             <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sYC-3a-CVh">
+                    <rect key="frame" x="0.0" y="243" width="375" height="80"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1vn-rz-RqX">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="80" id="8te-s6-zrD"/>
+                            </constraints>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="80" id="5nb-z1-4Em"/>
+                        <constraint firstAttribute="bottom" secondItem="1vn-rz-RqX" secondAttribute="bottom" id="MNE-Gl-1LS"/>
+                        <constraint firstItem="1vn-rz-RqX" firstAttribute="leading" secondItem="sYC-3a-CVh" secondAttribute="leading" id="hN7-Mq-A4j"/>
+                        <constraint firstItem="1vn-rz-RqX" firstAttribute="top" secondItem="sYC-3a-CVh" secondAttribute="top" id="kwi-YV-1pe"/>
+                        <constraint firstAttribute="trailing" secondItem="1vn-rz-RqX" secondAttribute="trailing" id="mW8-ga-h5g"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yFw-e5-E7a">
+                    <rect key="frame" x="0.0" y="199" width="375" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hEH-8j-iqd">
+                            <rect key="frame" x="0.0" y="0.0" width="187" height="44"/>
+                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <inset key="imageEdgeInsets" minX="-15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <state key="normal" title="Оценить" image="iconRatingFillCopy">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="rateButtonAction:" destination="Y0e-mX-Uzh" eventType="touchUpInside" id="vJ2-LJ-AFm"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y9i-wK-CqH">
+                            <rect key="frame" x="187" y="5" width="1" height="34"/>
+                            <color key="backgroundColor" red="0.83912390469999998" green="0.83926850559999999" blue="0.83911478520000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="1" id="kbK-G2-S0w"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gGj-VJ-4Dz">
+                            <rect key="frame" x="188" y="0.0" width="187" height="44"/>
+                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                            <inset key="imageEdgeInsets" minX="-15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <state key="normal" title="Поделиться" image="iconMenuShare">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="shareButtonAction:" destination="Y0e-mX-Uzh" eventType="touchUpInside" id="YQd-A0-vzk"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="y9i-wK-CqH" firstAttribute="centerX" secondItem="yFw-e5-E7a" secondAttribute="centerX" id="0Ig-Iy-thG"/>
+                        <constraint firstAttribute="bottom" secondItem="gGj-VJ-4Dz" secondAttribute="bottom" id="Dil-re-0pm"/>
+                        <constraint firstItem="y9i-wK-CqH" firstAttribute="top" secondItem="yFw-e5-E7a" secondAttribute="top" constant="5" id="Eyz-Y3-m2e"/>
+                        <constraint firstItem="hEH-8j-iqd" firstAttribute="top" secondItem="yFw-e5-E7a" secondAttribute="top" id="Jfv-aX-tY5"/>
+                        <constraint firstAttribute="bottom" secondItem="hEH-8j-iqd" secondAttribute="bottom" id="L2j-V0-bLD"/>
+                        <constraint firstItem="y9i-wK-CqH" firstAttribute="leading" secondItem="hEH-8j-iqd" secondAttribute="trailing" id="TiW-8b-D5k"/>
+                        <constraint firstAttribute="height" constant="44" id="Vle-0d-lAt"/>
+                        <constraint firstAttribute="bottom" secondItem="y9i-wK-CqH" secondAttribute="bottom" constant="5" id="cBg-a1-1fp"/>
+                        <constraint firstItem="gGj-VJ-4Dz" firstAttribute="leading" secondItem="y9i-wK-CqH" secondAttribute="trailing" id="eKX-bm-hku"/>
+                        <constraint firstItem="gGj-VJ-4Dz" firstAttribute="top" secondItem="yFw-e5-E7a" secondAttribute="top" id="mrm-Ub-4Jy"/>
+                        <constraint firstAttribute="trailing" secondItem="gGj-VJ-4Dz" secondAttribute="trailing" id="uDp-LB-jtN"/>
+                        <constraint firstItem="hEH-8j-iqd" firstAttribute="leading" secondItem="yFw-e5-E7a" secondAttribute="leading" id="wFr-57-Ahw"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
